--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -139,9 +139,14 @@ Package V2.0
   
 ## Comparing different settings in multi-group analysis
 
+ctwas settings
+
 * [Comparing ctwas running setting: %h2g/gene number/silver standard/go terms -- munro st only](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings.html)
 * [Comparing ctwas running setting: %h2g/gene number/silver standard/go terms -- susie st added](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings_susieST.html)
 * [Comparing ctwas running setting: parameters only -- susie + munro st](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_munro_susie_st.html)
+* [Comparing with apa model: parameters only -- apa model only st](https://sq-96.github.io/multigroup_ctwas_analysis/parameters_apa_li.html)
+
+postprocessing settings
 
 * [Comparing ld-mismatch setting](https://sq-96.github.io/multigroup_ctwas_analysis/comparing_differnt_settings_ldmm.html)
 
