--- a/analysis/comparing_munro_susie_st.Rmd
+++ b/analysis/comparing_munro_susie_st.Rmd
@@ -1405,3 +1405,640 @@ gridExtra::grid.arrange(pve_pie_by_type_woST, pve_pie_by_type_susieST,pve_pie_by
 
 
 
+
+
+# RBC-panukb
+
+
+## Setting: shared_all, thin = 0.1
+
+```{r warning=F,message=F}
+trait <- "RBC-panukb"
+thin <- 0.1
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F}
+st <- "without_ST"
+
+param_woST <- readRDS(paste0(folder_results_woST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_woST <- summarize_param(param_woST, gwas_n)
+total_nonSNPpve_woST <- 1- ctwas_parameters_woST$prop_heritability["SNP"]
+pve_pie_by_type_woST <- plot_piechart(ctwas_parameters = ctwas_parameters_woST, colors = colors, by = "type", title = paste0("withoutST - nonSNP %h2g:",round(total_nonSNPpve_woST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+
+st <- "with_ST"
+param_munroST <- readRDS(paste0(folder_results_munroST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+total_nonSNPpve_munroST <- 1- ctwas_parameters_munroST$prop_heritability["SNP"]
+pve_pie_by_type_munroST <- plot_piechart(ctwas_parameters = ctwas_parameters_munroST, colors = colors, by = "type", title = paste0("munroST - nonSNP %h2g:",round(total_nonSNPpve_munroST, digits = 4)))
+
+```
+
+```{r warning=F,message=F,fig.width=12, fig.height=5}
+gridExtra::grid.arrange(pve_pie_by_type_woST, pve_pie_by_type_susieST,pve_pie_by_type_munroST, 
+                        ncol = 3, top = paste0(trait,"-thin",thin,"-",var_struc))        
+
+```
+
+## Setting: shared_all, thin = 0.5
+
+```{r warning=F,message=F}
+thin <- 0.5
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F}
+st <- "without_ST"
+
+param_woST <- readRDS(paste0(folder_results_woST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_woST <- summarize_param(param_woST, gwas_n)
+total_nonSNPpve_woST <- 1- ctwas_parameters_woST$prop_heritability["SNP"]
+pve_pie_by_type_woST <- plot_piechart(ctwas_parameters = ctwas_parameters_woST, colors = colors, by = "type", title = paste0("withoutST - nonSNP %h2g:",round(total_nonSNPpve_woST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+
+st <- "with_ST"
+param_munroST <- readRDS(paste0(folder_results_munroST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+total_nonSNPpve_munroST <- 1- ctwas_parameters_munroST$prop_heritability["SNP"]
+pve_pie_by_type_munroST <- plot_piechart(ctwas_parameters = ctwas_parameters_munroST, colors = colors, by = "type", title = paste0("munroST - nonSNP %h2g:",round(total_nonSNPpve_munroST, digits = 4)))
+
+```
+
+```{r warning=F,message=F,fig.width=12, fig.height=5}
+gridExtra::grid.arrange(pve_pie_by_type_woST, pve_pie_by_type_susieST,pve_pie_by_type_munroST, 
+                        ncol = 3, top = paste0(trait,"-thin",thin,"-",var_struc))        
+
+```
+
+
+## Setting: shared_all, thin = 1
+
+```{r warning=F,message=F}
+thin <- 1
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F}
+st <- "without_ST"
+
+param_woST <- readRDS(paste0(folder_results_woST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_woST <- summarize_param(param_woST, gwas_n)
+total_nonSNPpve_woST <- 1- ctwas_parameters_woST$prop_heritability["SNP"]
+pve_pie_by_type_woST <- plot_piechart(ctwas_parameters = ctwas_parameters_woST, colors = colors, by = "type", title = paste0("withoutST - nonSNP %h2g:",round(total_nonSNPpve_woST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+
+st <- "with_ST"
+param_munroST <- readRDS(paste0(folder_results_munroST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+total_nonSNPpve_munroST <- 1- ctwas_parameters_munroST$prop_heritability["SNP"]
+pve_pie_by_type_munroST <- plot_piechart(ctwas_parameters = ctwas_parameters_munroST, colors = colors, by = "type", title = paste0("munroST - nonSNP %h2g:",round(total_nonSNPpve_munroST, digits = 4)))
+
+```
+
+```{r warning=F,message=F,fig.width=12, fig.height=5}
+gridExtra::grid.arrange(pve_pie_by_type_woST, pve_pie_by_type_susieST,pve_pie_by_type_munroST, 
+                        ncol = 3, top = paste0(trait,"-thin",thin,"-",var_struc))        
+
+```
+
+
+## Setting: shared_type, thin = 0.1
+
+```{r warning=F,message=F}
+thin <- 0.1
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F}
+st <- "without_ST"
+
+param_woST <- readRDS(paste0(folder_results_woST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_woST <- summarize_param(param_woST, gwas_n)
+total_nonSNPpve_woST <- 1- ctwas_parameters_woST$prop_heritability["SNP"]
+pve_pie_by_type_woST <- plot_piechart(ctwas_parameters = ctwas_parameters_woST, colors = colors, by = "type", title = paste0("withoutST - nonSNP %h2g:",round(total_nonSNPpve_woST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+
+st <- "with_ST"
+param_munroST <- readRDS(paste0(folder_results_munroST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+total_nonSNPpve_munroST <- 1- ctwas_parameters_munroST$prop_heritability["SNP"]
+pve_pie_by_type_munroST <- plot_piechart(ctwas_parameters = ctwas_parameters_munroST, colors = colors, by = "type", title = paste0("munroST - nonSNP %h2g:",round(total_nonSNPpve_munroST, digits = 4)))
+
+```
+
+```{r warning=F,message=F,fig.width=12, fig.height=5}
+gridExtra::grid.arrange(pve_pie_by_type_woST, pve_pie_by_type_susieST,pve_pie_by_type_munroST, 
+                        ncol = 3, top = paste0(trait,"-thin",thin,"-",var_struc))        
+
+```
+
+
+
+
+
+
+
+## Setting: shared_type, thin = 0.5
+
+```{r warning=F,message=F}
+thin <- 0.5
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F}
+st <- "without_ST"
+
+param_woST <- readRDS(paste0(folder_results_woST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_woST <- summarize_param(param_woST, gwas_n)
+total_nonSNPpve_woST <- 1- ctwas_parameters_woST$prop_heritability["SNP"]
+pve_pie_by_type_woST <- plot_piechart(ctwas_parameters = ctwas_parameters_woST, colors = colors, by = "type", title = paste0("withoutST - nonSNP %h2g:",round(total_nonSNPpve_woST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+
+st <- "with_ST"
+param_munroST <- readRDS(paste0(folder_results_munroST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+total_nonSNPpve_munroST <- 1- ctwas_parameters_munroST$prop_heritability["SNP"]
+pve_pie_by_type_munroST <- plot_piechart(ctwas_parameters = ctwas_parameters_munroST, colors = colors, by = "type", title = paste0("munroST - nonSNP %h2g:",round(total_nonSNPpve_munroST, digits = 4)))
+
+```
+
+```{r warning=F,message=F,fig.width=12, fig.height=5}
+gridExtra::grid.arrange(pve_pie_by_type_woST, pve_pie_by_type_susieST,pve_pie_by_type_munroST, 
+                        ncol = 3, top = paste0(trait,"-thin",thin,"-",var_struc))        
+
+```
+
+
+
+
+
+
+
+## Setting: shared_type, thin = 1
+
+```{r warning=F,message=F}
+thin <- 1
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F}
+st <- "without_ST"
+
+param_woST <- readRDS(paste0(folder_results_woST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_woST <- summarize_param(param_woST, gwas_n)
+total_nonSNPpve_woST <- 1- ctwas_parameters_woST$prop_heritability["SNP"]
+pve_pie_by_type_woST <- plot_piechart(ctwas_parameters = ctwas_parameters_woST, colors = colors, by = "type", title = paste0("withoutST - nonSNP %h2g:",round(total_nonSNPpve_woST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+```
+
+```{r warning=F,message=F}
+
+st <- "with_ST"
+param_munroST <- readRDS(paste0(folder_results_munroST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+
+ctwas_parameters_munroST <- summarize_param(param_munroST, gwas_n)
+total_nonSNPpve_munroST <- 1- ctwas_parameters_munroST$prop_heritability["SNP"]
+pve_pie_by_type_munroST <- plot_piechart(ctwas_parameters = ctwas_parameters_munroST, colors = colors, by = "type", title = paste0("munroST - nonSNP %h2g:",round(total_nonSNPpve_munroST, digits = 4)))
+
+```
+
+
+```{r warning=F,message=F,fig.width=12, fig.height=5}
+gridExtra::grid.arrange(pve_pie_by_type_woST, pve_pie_by_type_susieST,pve_pie_by_type_munroST, 
+                        ncol = 3, top = paste0(trait,"-thin",thin,"-",var_struc))        
+
+```
+
+
+
+
+
+
+
+
+
+# aFib-ebi-a-GCST006414
+
+## Setting: shared_all, thin = 0.1
+
+```{r warning=F,message=F}
+trait <- "aFib-ebi-a-GCST006414"
+thin <- 0.1
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+## Setting: shared_all, thin = 0.5
+
+```{r warning=F,message=F}
+thin <- 0.5
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+## Setting: shared_all, thin = 1
+
+```{r warning=F,message=F}
+thin <- 1
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+## Setting: shared_type, thin = 0.1
+
+```{r warning=F,message=F}
+thin <- 0.1
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+
+
+
+## Setting: shared_type, thin = 0.5
+
+```{r warning=F,message=F}
+thin <- 0.5
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+
+## Setting: shared_type, thin = 1
+
+```{r warning=F,message=F}
+thin <- 1
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+# SCZ-ieu-b-5102
+
+## Setting: shared_all, thin = 0.1
+
+```{r warning=F,message=F}
+trait <- "SCZ-ieu-b-5102"
+thin <- 0.1
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+## Setting: shared_all, thin = 0.5
+
+```{r warning=F,message=F}
+thin <- 0.5
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+## Setting: shared_all, thin = 1
+
+```{r warning=F,message=F}
+thin <- 1
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+## Setting: shared_type, thin = 0.1
+
+```{r warning=F,message=F}
+thin <- 0.1
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+
+
+
+## Setting: shared_type, thin = 0.5
+
+```{r warning=F,message=F}
+thin <- 0.5
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+
+## Setting: shared_type, thin = 1
+
+```{r warning=F,message=F}
+thin <- 1
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("susieST - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
