--- a/analysis/parameters_apa_li.Rmd
+++ b/analysis/parameters_apa_li.Rmd
@@ -536,6 +536,315 @@ pve_pie_by_type_susieST
 
 
 
+
+
+# BMI-panukb
+
+## Setting: shared_all, thin = 0.1
+
+```{r warning=F,message=F}
+trait <- "BMI-panukb"
+thin <- 0.1
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+## Setting: shared_all, thin = 0.5
+
+```{r warning=F,message=F}
+thin <- 0.5
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+## Setting: shared_all, thin = 1
+
+```{r warning=F,message=F}
+thin <- 1
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+## Setting: shared_type, thin = 0.1
+
+```{r warning=F,message=F}
+thin <- 0.1
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+
+
+
+## Setting: shared_type, thin = 0.5
+
+```{r warning=F,message=F}
+thin <- 0.5
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+## Setting: shared_type, thin = 1
+
+```{r warning=F,message=F}
+thin <- 1
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+
+# RBC-panukb
+
+## Setting: shared_all, thin = 0.1
+
+```{r warning=F,message=F}
+trait <- "RBC-panukb"
+thin <- 0.1
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+## Setting: shared_all, thin = 0.5
+
+```{r warning=F,message=F}
+thin <- 0.5
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+## Setting: shared_all, thin = 1
+
+```{r warning=F,message=F}
+thin <- 1
+var_struc <- "shared_all"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+## Setting: shared_type, thin = 0.1
+
+```{r warning=F,message=F}
+thin <- 0.1
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+
+
+
+## Setting: shared_type, thin = 0.5
+
+```{r warning=F,message=F}
+thin <- 0.5
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+## Setting: shared_type, thin = 1
+
+```{r warning=F,message=F}
+thin <- 1
+var_struc <- "shared_type"
+
+gwas_n <- samplesize[trait]
+```
+
+```{r warning=F,message=F,fig.width=5, fig.height=5}
+st <- "with_susieST"
+
+param_susieST <- readRDS(paste0(folder_results_susieST,"/",trait,"/",trait,".",st,".thin",thin,".",var_struc,".param.RDS"))
+
+
+ctwas_parameters_susieST <- summarize_param(param_susieST, gwas_n)
+total_nonSNPpve_susieST <- 1- ctwas_parameters_susieST$prop_heritability["SNP"]
+pve_pie_by_type_susieST <- plot_piechart(ctwas_parameters = ctwas_parameters_susieST, colors = colors, by = "type", title = paste0("top-apa - nonSNP %h2g:",round(total_nonSNPpve_susieST, digits = 4)))
+
+pve_pie_by_type_susieST
+
+```
+
+
+
+
+
+
+
 # aFib-ebi-a-GCST006414
 
 ## Setting: shared_all, thin = 0.1
