--- a/analysis/real_data_coloc.Rmd
+++ b/analysis/real_data_coloc.Rmd
@@ -116,29 +116,56 @@ get_results <- function(gwas_id,gwas_name){
   coloc_data <- as.vector(table(unique(coloc_mts[,c("gene_name","region_id")])$region_id))
   multictwas_data <- as.vector(table(combined_pip$region_id))
   
+  alpha <- 0.05
+  finemap_res <- finemap_res[finemap_res$type!="SNP",]
+  finemap_res <- unique(finemap_res[,c("id","z","gene_name","region_id")])
+  sig_thresh <- qnorm(1-(alpha/nrow(finemap_res)/2), lower=T)
+  twas_res <- finemap_res[abs(finemap_res$z)>sig_thresh,]
+  twas_data <- as.vector(table(unique(twas_res[,c("gene_name","region_id")])$region_id))
   # Combine data into a data frame
   df <- data.frame(
-    value = c(coloc_data, multictwas_data),
-    group = c(rep("Coloc",length(coloc_data)),rep("Multi-cTWAS",length(multictwas_data)))
+    value = c(coloc_data, multictwas_data,twas_data),
+    group = c(rep("Coloc",length(coloc_data)),rep("Multi-cTWAS",length(multictwas_data)),rep("TWAS",length(twas_data)))
   )
   
+  #p1 <- ggplot(df, aes(x = value, fill = group)) +
+  #  geom_histogram(position = "identity", alpha = 0.5, bins = max(coloc_data)) +
+  #  scale_fill_manual(values = c("blue", "red")) +
+  #  labs(title = gwas_id, x = "Value", y = "Frequency", fill = "Dataset") + theme_minimal()
+  
   p1 <- ggplot(df, aes(x = value, fill = group)) +
-    geom_histogram(position = "identity", alpha = 0.5, bins = max(coloc_data)) +
-    scale_fill_manual(values = c("blue", "red")) +
-    labs(title = gwas_id, x = "Value", y = "Frequency", fill = "Dataset") + theme_minimal()
+  geom_histogram(
+    aes(y = after_stat(count) / tapply(after_stat(count), after_stat(group), sum)[after_stat(group)]), 
+    position = "identity", alpha = 0.5, bins = max(coloc_data)
+  ) +
+  scale_fill_manual(values = c("blue", "red", "grey")) +
+  labs(title = gwas_id, x = "Value", y = "Proportion (within group)", fill = "Dataset") +
+  theme_minimal()
   
   ctwas_coloc_data <- coloc_mts[coloc_mts$region_id %in% region_singals, ]
   ctwas_coloc_data <- as.vector(table(unique(ctwas_coloc_data[,c("gene_name","region_id")])$region_id))
+  
+  ctwas_twas_data <- twas_res[twas_res$region_id %in% region_singals, ]
+  ctwas_twas_data <- as.vector(table(twas_res$region_id))
+  # Combine data into a data frame
   # Combine data into a data frame
   df <- data.frame(
-    value = c(ctwas_coloc_data, multictwas_data),
-    group = c(rep("Coloc",length(ctwas_coloc_data)),rep("Multi-cTWAS",length(multictwas_data)))
+    value = c(ctwas_coloc_data, multictwas_data,ctwas_twas_data),
+    group = c(rep("Coloc",length(ctwas_coloc_data)),rep("Multi-cTWAS",length(multictwas_data)),rep("TWAS",length(ctwas_twas_data)))
   )
   
+  #p2 <- ggplot(df, aes(x = value, fill = group)) +
+  #  geom_histogram(position = "identity", alpha = 0.5, bins = max(coloc_data)) +
+  #  scale_fill_manual(values = c("blue", "red")) +
+  #  labs(title = gwas_id, x = "Value", y = "Frequency", fill = "Dataset") + theme_minimal()
   p2 <- ggplot(df, aes(x = value, fill = group)) +
-    geom_histogram(position = "identity", alpha = 0.5, bins = max(coloc_data)) +
-    scale_fill_manual(values = c("blue", "red")) +
-    labs(title = gwas_id, x = "Value", y = "Frequency", fill = "Dataset") + theme_minimal()
+  geom_histogram(
+    aes(y = after_stat(count) / tapply(after_stat(count), after_stat(group), sum)[after_stat(group)]), 
+    position = "identity", alpha = 0.5, bins = max(coloc_data)
+  ) +
+  scale_fill_manual(values = c("blue", "red", "grey")) +
+  labs(title = gwas_id, x = "Value", y = "Proportion (within group)", fill = "Dataset") +
+  theme_minimal()
   
   return(list("num_coloc_gene" = num_coloc_gene,
               "num_coloc_ctwas_gene" = num_coloc_ctwas_gene,
@@ -227,6 +254,14 @@ get_results_mts <- function(gwas_id,gwas_name){
   
   finemap_res <- readRDS(paste0("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/",gwas_id,"/",gwas_id,".finemap_regions_res.RDS"))
   finemap_res <- finemap_res$finemap_res
+  finemap_res <- finemap_res[finemap_res$type!="SNP",]
+  
+  alpha <- 0.05
+  sig_thresh <- qnorm(1-(alpha/nrow(finemap_res)/2), lower=T)
+  twas_res <- finemap_res[abs(finemap_res$z)>sig_thresh,]
+  
+  
+  
   finemap_res <- finemap_res[finemap_res$susie_pip>0.8,]
   
   num_multi_ctwas_mts <- length(unique(finemap_res$id))
@@ -236,30 +271,49 @@ get_results_mts <- function(gwas_id,gwas_name){
   
   coloc_data <- as.vector(table(unique(coloc_mts[,c("id","region_id")])$region_id))
   multictwas_data <- as.vector(table(finemap_res$region_id))
-  
+  twas_data <- as.vector(table(twas_res$region_id))
   # Combine data into a data frame
   df <- data.frame(
-    value = c(coloc_data, multictwas_data),
-    group = c(rep("Coloc",length(coloc_data)),rep("Multi-cTWAS",length(multictwas_data)))
+    value = c(coloc_data, multictwas_data,twas_data),
+    group = c(rep("Coloc",length(coloc_data)),rep("Multi-cTWAS",length(multictwas_data)),rep("TWAS",length(twas_data)))
   )
   
+  #p1 <- ggplot(df, aes(x = value, fill = group)) +
+  #  geom_histogram(position = "identity", alpha = 0.5) + #bins = max(coloc_data)
+  #  scale_fill_manual(values = c("blue", "red")) +
+  #  labs(title = gwas_id, x = "Value", y = "Frequency", fill = "Dataset") + theme_minimal()
   p1 <- ggplot(df, aes(x = value, fill = group)) +
-    geom_histogram(position = "identity", alpha = 0.5, bins = max(coloc_data)) +
-    scale_fill_manual(values = c("blue", "red")) +
-    labs(title = gwas_id, x = "Value", y = "Frequency", fill = "Dataset") + theme_minimal()
+  geom_histogram(
+    aes(y = after_stat(count) / tapply(after_stat(count), after_stat(group), sum)[after_stat(group)]), 
+    position = "identity", alpha = 0.5, bins = max(coloc_data)
+  ) +
+  scale_fill_manual(values = c("blue", "red", "grey")) +
+  labs(title = gwas_id, x = "Value", y = "Proportion (within group)", fill = "Dataset") +
+  theme_minimal()
   
   ctwas_coloc_data <- coloc_mts[coloc_mts$region_id %in% region_singals, ]
   ctwas_coloc_data <- as.vector(table(unique(ctwas_coloc_data[,c("id","region_id")])$region_id))
+  
+  ctwas_twas_data <- twas_res[twas_res$region_id %in% region_singals, ]
+  ctwas_twas_data <- as.vector(table(twas_res$region_id))
   # Combine data into a data frame
   df <- data.frame(
-    value = c(ctwas_coloc_data, multictwas_data),
-    group = c(rep("Coloc",length(ctwas_coloc_data)),rep("Multi-cTWAS",length(multictwas_data)))
+    value = c(ctwas_coloc_data, multictwas_data,ctwas_twas_data),
+    group = c(rep("Coloc",length(ctwas_coloc_data)),rep("Multi-cTWAS",length(multictwas_data)),rep("TWAS",length(ctwas_twas_data)))
   )
   
+  #p2 <- ggplot(df, aes(x = value, fill = group)) +
+  #  geom_histogram(position = "identity", alpha = 0.5, bins = max(coloc_data)) +
+  #  scale_fill_manual(values = c("blue", "red")) +
+  #  labs(title = gwas_id, x = "Value", y = "Frequency", fill = "Dataset") + theme_minimal()
   p2 <- ggplot(df, aes(x = value, fill = group)) +
-    geom_histogram(position = "identity", alpha = 0.5, bins = max(coloc_data)) +
-    scale_fill_manual(values = c("blue", "red")) +
-    labs(title = gwas_id, x = "Value", y = "Frequency", fill = "Dataset") + theme_minimal()
+  geom_histogram(
+    aes(y = after_stat(count) / tapply(after_stat(count), after_stat(group), sum)[after_stat(group)]), 
+    position = "identity", alpha = 0.5, bins = max(coloc_data)
+  ) +
+  scale_fill_manual(values = c("blue", "red", "grey")) +
+  labs(title = gwas_id, x = "Value", y = "Proportion (within group)", fill = "Dataset") +
+  theme_minimal()
   
   return(list("num_coloc_mts" = num_coloc_mts,
               "num_coloc_ctwas_mts" = num_coloc_ctwas_mts,
